# qt-excercise

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  applicationtools.cc  applicationtools.hh  cities_list_model.cc  cities_list_model.hh  cities_table_model.cc  cities_table_model.hh  citieswindow.cc  citieswindow.hh  citieswindow.ui  main.cc  mainwindow.cc  mainwindow.hh  mainwindow.ui  pluginwindow.cc  pluginwindow.hh  pluginwindow.ui
dummy_plugin/: CMakeLists.txt  dummy_plugin.cc  dummy_plugin.hh
plugin_interfaces_lib/: CMakeLists.txt  i_city_provider.cc  i_city_provider.hh  i_plugin.cc  i_plugin.hh
plugin_manager_lib/: CMakeLists.txt  extension_manager.cc  extension_manager.hh  i_plugin.hh  plugin_manager.cc  plugin_manager.hh
static_city_source_plugin/: CMakeLists.txt  plugin.cc  plugin.hh  query.cc  query.hh  staticCityProvider.cc  staticCityProvider.hh  static_city_source_plugin.qrc  static_data.cc  static_data.hh
